visus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esgf-visus
  labels:
    stack: esgf
    component: visus
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    stack: esgf
    component: visus
